--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.0.17",
+    "@react-pdf/renderer": "^3.1.12",
     "cors": "^2.8.5",
     "daisyui": "^2.51.6",
     "dotenv": "^16.1.4",
@@ -20,8 +21,12 @@
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
+    "react-lazy-load-image-component": "^1.6.0",
     "react-router-dom": "^6.11.0",
+    "react-spinners": "^0.13.8",
     "sort-by": "^1.2.0",
+    "sweetalert2": "^11.7.20",
     "swiper": "^9.2.4"
   },
   "devDependencies": {
